--- a/EpicRide/organic_magazine/style.css
+++ b/EpicRide/organic_magazine/style.css
@@ -1061,7 +1061,7 @@ html[xmlns] .slides {
 	line-height: 0;
 	max-width: 100%;
 	margin-bottom: 20px;
-	}
+	}.featurephotoimg, .featurephotovid {	display: block;	line-height: 0;	max-width: 100%;	margin-bottom: 20px;	}
 .featurevid iframe, 
 .featurevid embed, 
 .featurevid object {
