--- a/EpicRide/organic_magazine/style.css
+++ b/EpicRide/organic_magazine/style.css
@@ -1059,8 +1059,8 @@ html[xmlns] .slides {
 .featureimg, .featurevid {
 	display: block;
 	line-height: 0;
-	max-width: 100%;
-	margin-bottom: 20px;
+	max-width: 25%;
+	margin-bottom: 20px;		margin-right: 30px;		float: left;	
 	}.featurephotoimg, .featurephotovid {	display: block;	line-height: 0;	max-width: 100%;	margin-bottom: 20px;	}
 .featurevid iframe, 
 .featurevid embed, 
